--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,9 +35,15 @@ requirements:
 test:
   imports:
     - PyFocus
-    - PyFocus.sim
-    - PyFocus.VP_functions
+    - PyFocus.custom_dataclasses
+    - PyFocus.custom_typing
+    - PyFocus.equations
+    - PyFocus.model
+    - PyFocus.napari_adapter
+    - PyFocus.plot_functions
+    - PyFocus.user_interface
   commands:
+    - pip list
     - pip check
   requires:
     - pip
