--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
     - matplotlib-base
     - numpy
     - pydantic
-    - pyqt
+    # - pyqt
     - pyqtgraph
     - python >=3.6
     - qdarkstyle
